data iteration done image aligned/font-fixed

--- a/css/style.css
+++ b/css/style.css
@@ -39,15 +39,11 @@ padding: 20px
 }
 .data{
     width: 90%;
-    line-height: 50px;
 }
 .input{
     width:100%;
     height: 25px;
 }
 @media only screen and (min-width: 400px) {
-    .data{
-        font-size: 8vh;
-
-    }
+    
   }
